# ROS_study

./: .gitignore  arduino_bot.urdf
arduino_bot_ws/: .gitignore
arduino_bot_ws/devel/: .catkin  local_setup.sh
arduino_bot_ws/devel/include/arduino_bot_controller/: AnglesConverter.h  AnglesConverterRequest.h  AnglesConverterResponse.h
arduino_bot_ws/devel/include/arduino_bot_test/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
arduino_bot_ws/devel/lib/arduino_bot_test/: simple_cpp_publisher  simple_cpp_subscriber  simple_service_client.py
arduino_bot_ws/devel/lib/pkgconfig/: arduino_bot_controller.pc  arduino_bot_description.pc  arduino_bot_test.pc
arduino_bot_ws/devel/share/arduino_bot_controller/cmake/: arduino_bot_controller-msg-extras.cmake  arduino_bot_controller-msg-paths.cmake  arduino_bot_controllerConfig.cmake
arduino_bot_ws/src/arduino_bot_controller/: CMakeLists.txt  package.xml
arduino_bot_ws/src/arduino_bot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
arduino_bot_ws/src/arduino_bot_controller/include/arduino_bot_controller/: arduino_bot_interface.h
arduino_bot_ws/src/arduino_bot_controller/launch/: controller.launch  controller_cpp.launch
arduino_bot_ws/src/arduino_bot_controller/scripts/: angles_converter.py
arduino_bot_ws/src/arduino_bot_controller/src/: angles_cpp_converter.cpp  arduino_bot_interface.cpp
arduino_bot_ws/src/arduino_bot_controller/srv/: AnglesConverter.srv
arduino_bot_ws/src/arduino_bot_description/: CMakeLists.txt
arduino_bot_ws/src/arduino_bot_description/launch/: display.launch  gazebo.launch
arduino_bot_ws/src/arduino_bot_description/rviz/: display.rviz
arduino_bot_ws/src/arduino_bot_description/urdf/: arduinobot.urdf.xacro
arduino_bot_ws/src/arduino_bot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
arduino_bot_ws/src/arduino_bot_moveit/config/: arduino_bot.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
arduino_bot_ws/src/arduino_bot_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
arduino_bot_ws/src/arduino_bot_remote/: CMakeLists.txt  package.xml
arduino_bot_ws/src/arduino_bot_remote/action/: ArduinoBotTask.action
arduino_bot_ws/src/arduino_bot_remote/scripts/: task_server.py
arduino_bot_ws/src/arduino_bot_test/: CMakeLists.txt  package.xml
arduino_bot_ws/src/arduino_bot_test/action/: Fibonacci.action
arduino_bot_ws/src/arduino_bot_test/config/: simple_configuration.yaml
arduino_bot_ws/src/arduino_bot_test/scripts/: simple_action_client.py  simple_action_server.py  simple_publisher.py
arduino_bot_ws/src/arduino_bot_test/src/: simple_action_client.cpp  simple_action_server.cpp  simple_publisher.cpp  simple_service.cpp  simple_service_client.cpp  simple_subscriber.cpp  simple_timer.cpp
(+19 files in other folders)
